Change to java 11