@@ -14,8 +14,8 @@
 		<description>API sur les m\u00e9tadonn\u00e9es de l'Insee</description>
 	
 		<!--  Dependencies' version -->
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 		<jersey.version>2.29.1</jersey.version>
 		<jackson.version>2.10.1</jackson.version>
 		<jakarta.version>4.0.3</jakarta.version>
@@ -39,7 +39,7 @@
         <sonar.language>java</sonar.language>
         <version.maven-jacoco>0.8.5</version.maven-jacoco>
 		<version.maven-sonar>3.7.0.1746</version.maven-sonar>
-		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+		<argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8</argLine>
 
 	</properties>
 	
@@ -86,7 +86,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
+			<artifactId>log4j-slf4j18-impl</artifactId>
 			<version>${log.version}</version>
 		</dependency>
 
